src/objects/BT_CS_Interface_Field_Validation__c.object
<CustomObject>
    <description>Store field validation error messages to be displayed in the datapool failed records for that field for that interface</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Stores the error message to be displayed in the datapool failed record for that field for that interface</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_ID__c</fullName>
        <description>Stores Field ID to be used to retrieve error message for that field for that interface</description>
        <label>Field ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Stores the field name of the field to be validated for that interface</description>
        <label>Field Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>BT_CS_Interface_Field_Validation</label>
    <nameField>
        <label>Interface ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CS_Interface_Field_Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>